--- a/Ambient925/MainStoryboard.storyboard
+++ b/Ambient925/MainStoryboard.storyboard
@@ -11,7 +11,26 @@
                     <view key="view" contentMode="scaleToFill" id="2BL-fD-Kg4">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3iv-FQ-qeM">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Tweet">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="testTwitterPost" destination="VL0-Cy-HxK" eventType="touchUpInside" id="JTx-cl-vx4"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="3iv-FQ-qeM" firstAttribute="centerX" secondItem="2BL-fD-Kg4" secondAttribute="centerX" type="default" id="Oto-Wa-TIl"/>
+                            <constraint firstItem="3iv-FQ-qeM" firstAttribute="top" secondItem="2BL-fD-Kg4" secondAttribute="top" constant="98" id="SCw-8h-73n"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pwp-8f-9sn" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -19,6 +38,14 @@
             <point key="canvasLocation" x="96" y="35"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="BWCSoundBoxViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BWCSoundBoxViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
