--- a/Ambient925/MainStoryboard.storyboard
+++ b/Ambient925/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="VL0-Cy-HxK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="VL0-Cy-HxK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
@@ -28,8 +28,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="3iv-FQ-qeM" firstAttribute="centerX" secondItem="2BL-fD-Kg4" secondAttribute="centerX" type="default" id="Oto-Wa-TIl"/>
-                            <constraint firstItem="3iv-FQ-qeM" firstAttribute="top" secondItem="2BL-fD-Kg4" secondAttribute="top" constant="98" id="SCw-8h-73n"/>
+                            <constraint firstItem="3iv-FQ-qeM" firstAttribute="top" secondItem="2BL-fD-Kg4" secondAttribute="top" constant="6" id="Hm2-gK-gvz"/>
+                            <constraint firstItem="3iv-FQ-qeM" firstAttribute="leading" secondItem="2BL-fD-Kg4" secondAttribute="leading" constant="7" id="pOB-vc-Jtz"/>
                         </constraints>
                     </view>
                 </viewController>
